Properly refactored repetetive code and used best practices in all the controllers.